k8s/proxy/jx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    fabric8.io/generated-by: exposecontroller
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  generation: 1
  labels:
    provider: fabric8
  name: httpbin
  namespace: jx
spec:
  rules:
  - host: httpbin.jx.tourgeek.com
    http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 8000
  tls:
  - hosts:
    - httpbin.jx.tourgeek.com
    secretName: tls-httpbin
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.77
