k8s/proxy/maven-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    fabric8.io/generated-by: exposecontroller
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  generation: 1
  labels:
    provider: fabric8
  name: maven
  namespace: jx
spec:
  rules:
  - host: maven.jx.tourgeek.com
    http:
      paths:
      - backend:
          serviceName: maven
          servicePort: 80
  tls:
  - hosts:
    - maven.jx.tourgeek.com
    secretName: tls-maven
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.77
